# 3DMaker

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
docs/: bicycle_psnr_benchmarks.md  colmap2nerf_explained.md  dataloader_scene_bounds.md  distortion_loss_gradient.md  ray_stepping_and_occupancy.md
modules/NeRF/: BakedNerf.cu  BakedNerf.h  CMakeLists.txt  DataLoader.cu  DataLoader.h  DeviceBuffer.h  InstantNerf.cu  InstantNerf.h  NerfTrainer.cu  NerfTrainer.h  Pipeline.cu  Pipeline.h  RenderKernels.cu  RenderKernels.h  Timers.h  compositing.cu  otherKernels.cu  processRays.cu
modules/NeRF/test_kernels/: benchmark.cu  compare_hit.cu  render.cu  testProcessRays.cu  test_baking.cu  test_loading.cu  test_scene_footer.cu  test_training.cu  train.cu  train_hit.cu
modules/TinyMLP/: CMakeLists.txt  TinyMLP.cu  TinyMLP.h  TinyMLPHashGrid.cu  TinyMLPHashGrid.h  demo.cpp  demoHashGrid.cpp  mlpKernel.cu  networkFusion.cu  networkFusionBackward.cu  networkFusionBackwardHashtable.cu  networkFusionHashtable.cu  networkFusionHashtable_backup.cu  optimizerKernel.cu
modules/TinyMLP/tests/: back_test.py  bench_compare.py  bench_hashgrid.py  bench_mlp.py  bench_test.py  learn_image.py  make_report.py  test.py
modules/TinyMLP/tests/results/: pytorch.csv  report.md  tinymlp.csv
modules/TinyMLP/tests_kernels/: benchCompare.cu  networkFusionBackward_lb4.cu  testBackwardDim32.cu  testForwardDim32.cu  testFusionBackward.cu  testFusionBackwardHashtable.cu  testJitInference.cu  testMlp.cu  testModes.cu  testNetworkFusion.cu  testNetworkFusionHashtable.cu  testOptimizer.cu  testScatterAB.cu
scripts/: analyze_capture.py  colmap2nerf.py  colmap_depth.py  convertparsesnpy.py
src/: main.cpp  render.cpp
